api support for creating app upon user signup
